Pràctica 10, exercici 2 acabats. Les pràctiques 7 a 11 funcionen perfectament. He de revisar de 1 a 6 (Quan passin examens... Si tinc ganes...)

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@ test.*
 tst
 SanchezRodriguezIgnasiP1.c
 
-### Compiled programs
-*.exe
+### Python test
+*.py
+*.pyc
 
 ### Backup ~ files. Should clean, but...
-*.*~
+*~
 
 ### Latex auxiliary files. Again, I should clean them but...
 *.aux
